--- a/Hotel-2.html
+++ b/Hotel-2.html
@@ -12,7 +12,7 @@
     <div>
         <div class="box1">
             <ul>
-                <li><a href="#">Home </a></li>
+                <li><a href="index.html">Home </a></li>
                 <li><a href="#">Hotels </a></li>
                 <li><a href="#">Menu </a></li>
                 <li><a href="#">Contact</a></li>
@@ -35,8 +35,8 @@
         
          </div>
          <div class="images">
-            <img src="./hotel-img/pic1.jpg"  alt="">
-            <img src="./hotel-img/pic 2.jpg" alt="">
+            <img src="./hotel-img/pic1.jpg" alt="">
+            <img src="./hotel-img/pic 2.jpg"alt="">
             <img src="./hotel-img/pic 3.jpg" alt="">
             <img src="./hotel-img/pic 4.jpg" alt="">
             <img src="./hotel-img/pic5.jpg" alt="">
