--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 				<div class="box">
 						<div class="box1">
 							<ul>
-								<li><a href="#">Nuro Shei </a></li>
+								<li><a href="About-Us.html">Nuro Shei </a></li>
 								<li><a href="#">Home </a></li>
 								<li><a href="Hotel-2.html">Hotels </a></li>
 								<li><a href="#">Menu </a></li>
-								<li><a href="#">Contact</a></li>
+								<li><a href="Login.html">Contact</a></li>
 							<div class="button1">
 								<button>Login</button>
 							</div> 
@@ -30,7 +30,7 @@
 						<div class="p">
 						<div>
 								<h5>SIMLPE-UNIQUE-FRIENDLY</h5>
-							<h1> Make Yourself At Home <br>In Our <span>Hotel.</span></h1> 
+							<h1> Make Yourself At Home <br>In Our Hotel.</h1> 
 							<button class="but">Location|Check in|Check Out|RoomsFor|Search</button>
 						</div>
 						</div>
